--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Sheldon's Personal Site</title>
 </head>
 
-<body>
+<body style="background-color: #F1F7E7;">
   <table cellspacing="20">
     <td><img src="https://media-exp1.licdn.com/dms/image/C5103AQH6j3jWWSOOYA/profile-displayphoto-shrink_200_200/0/1517399098083?e=1634774400&v=beta&t=K6oOIR_mPhm2JIm1x7cQJn8Kd0z4481HPsh9i9PIEAw" alt="Sheldon's profile picture"></td>
     <td><h1>Sheldon Lee</h1>
