--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 <head>
   <meta charset="utf-8">
   <title>Sheldon's Personal Site</title>
+  <link rel="stylesheet" href="css/styles.css">
+
+
 </head>
 
-<body style="background-color: #F1F7E7;">
+<body>
   <table cellspacing="20">
     <td><img src="https://media-exp1.licdn.com/dms/image/C5103AQH6j3jWWSOOYA/profile-displayphoto-shrink_200_200/0/1517399098083?e=1634774400&v=beta&t=K6oOIR_mPhm2JIm1x7cQJn8Kd0z4481HPsh9i9PIEAw" alt="Sheldon's profile picture"></td>
     <td><h1>Sheldon Lee</h1>
@@ -14,7 +17,7 @@
     <p><em>Newbie Web Dev</em></p>
     <p>Learning how to be a web developer</p></td>
   </table>
-  <hr size="3" color="black">
+  <hr>
   <h3>Education</h3>
   <p>San Francisco State University</p>
   <ul>
@@ -34,7 +37,7 @@
       <td>Agilent Technologies</td>
     </tr>
   </table>
-  <hr size="3" color="black">
+  <hr>
 <h3>Skills</h3>
   <table>
     <tr>
@@ -55,7 +58,7 @@
       <td></td>
     </tr>
   </table>
-    <hr size="2" color="black">
+    <hr>
     <a href="hobbies.html">My hobbies</a>
     <br>
     <br>
