--- a/Contact.html
+++ b/Contact.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+  <link rel="stylesheet" href="styles.css">
     <title></title>
   </head>
   <body>
@@ -13,7 +14,7 @@
       <input type="text" name="yourName" value=""><br>
       <label>Your email</label>
       <input type="email" name="yourEmail" value=""><br>
-      <label>Your message</label>
+      <label>Your message</label><br>
       <textarea name="yourMessage" rows="8" cols="40"></textarea>
       <input type="submit" name="""">
       </form>
